<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="800px"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_sepatu"

                android:paddingBottom="20px"
                app:boxCornerRadiusTopEnd="30px"
                app:boxCornerRadiusTopStart="30px"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETnamaSepatu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brand_sepatu"
                android:paddingBottom="20px"
                app:boxCornerRadiusTopEnd="30px"
                app:boxCornerRadiusTopStart="30px"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETbrandSepatu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_sepatu"
                android:paddingBottom="20px"
                app:boxCornerRadiusTopEnd="30px"
                app:boxCornerRadiusTopStart="30px"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETtypeSepatu"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_telp"
                android:paddingBottom="20px"
                app:boxCornerRadiusTopEnd="30px"
                app:boxCornerRadiusTopStart="30px"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ETPhoneSepatu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ukuran Sepatu" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/Ukuran42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_42"
                    android:paddingEnd="50px"
                    android:paddingRight="50px" />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/Ukuran43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_43"
                    android:paddingEnd="50px"
                    android:paddingRight="50px" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/Ukuran44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_44"

                    android:paddingEnd="50px"
                    android:paddingRight="50px" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/Ukuran45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/_45" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    <Button
        android:id="@+id/bttnInputSepatu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/add_sepatu" />
</RelativeLayout>